--- a/host_vars/leaf3.yml
+++ b/host_vars/leaf3.yml
@@ -19,3 +19,8 @@ bgp:
       neighbors:
         - address: 192.168.100.1
         - address: 192.168.100.2
+
+routing_options:
+  router_id: 192.168.100.12
+  autonomous_system: 65000
+
