--- a/pb-provision-bgp.yml
+++ b/pb-provision-bgp.yml
@@ -9,31 +9,40 @@
     PATH: "/root/provision-EVPN-VXLAN/bin"
 
   vars:
-    config_file: configs/{{ inventory_hostname }}.conf
-    diffs_file: configs/{{ inventory_hostname }}.diff
-    initial: true
+    - config_dir: configs/{{ inventory_hostname }}
+    - diffs_dir: configs/{{ inventory_hostname }}
+    - provider: {
+                 'host': '{{ junos_host }}',
+                 'port': '{{ netconf_port }}',
+                 'user': '{{ junos_username }}',
+                 'passwd': '{{ junos_passwd }}',
+                 'timeout': '60',
+                 'logfile': '/tmp/ansible.changes.log'
+                }
+    - snippets:
+        - routing_options
+        - bgp
+        - policy_options
 
   tasks:
-   - name: Generate config
-     template:
-       src: templates/bgp.j2
-       dest: "{{ config_file }}"
+    - name: Generate configs
+      template:
+        src: "templates/{{ item }}.j2"
+        dest: "{{ config_dir }}/{{ item }}.conf"
+      with_list: "{{ snippets }}"
 
-   - name: Load config on the device
-     juniper_junos_config:
-       host: "{{ junos_host }}"
-       port: "{{ netconf_port }}"
-       user: "{{ junos_username }}"
-       passwd: "{{ junos_passwd }}"
-       timeout: 60
-       logfile: /tmp/ansible.changes.log
-       load: merge
-       commit: true
-       src: "{{ config_file }}"
-       diffs_file: "{{ diffs_file }}"
-     register: result
+    - name: Load config on the device
+      juniper_junos_config:
+        provider: "{{ provider }}"
+        load: merge
+        commit: true
+        src: "{{ config_dir }}/{{ item }}.conf"
+        diffs_file: "{{ diffs_dir }}/{{ item }}.diff"
+      with_list: "{{ snippets }}"
+      register: configs
 
-   - name: Print diff
-     debug: var=result.diff_lines
-     when: result.diff_lines is defined
+    - name: Print diff
+      debug: var="{{item.item.diff_lines}}"
+      when: item.item.diff_lines is defined
+      with_list: "{{ configs.results }}"
 
